Specificity fix for chart focus in high-contrast

--- a/_sass/bootstrap5/layouts/_indicator.scss
+++ b/_sass/bootstrap5/layouts/_indicator.scss
@@ -5,6 +5,7 @@
         padding-top: 10px;
     }
 
+    &.contrast-high canvas,
     canvas {
         @include noselect;
         &:focus {
